--- a/TermPaperHints/TermPaperDetails.Rmd
+++ b/TermPaperHints/TermPaperDetails.Rmd
@@ -12,7 +12,7 @@ The largest assignment will be a term paper. The term paper may be
 either a literature review, in which case it _must_ be completed by an individual, or an empirical/theoretical paper which may have up to three co-authors. Graduate students
 must complete an empirical/theoretical paper. Term paper preparation and evaluation will be in stages.
 
-The general parameters are that the final term paper should be between 15 and 20 pages long, excluding major graphics and bibliography.  Literature review papers should have at least 15 peer reviewed or government publications, as part of the review.
+The general parameters are that the final term paper should be between 15 and 20 pages long, excluding major graphics and bibliography.  Literature review papers should have at least 15 peer reviewed or government publications as part of the review.
 
 
 ## The Writing Sample
@@ -27,23 +27,24 @@ This should be turned in the “Writing Sample” assignment folder in D2L by _O
 
 If things are properly cited and the language is reasonable fluid -- you get full credit.  
 
-If things are not properly cited, you still get full credit, but all the deadlines except the final draft due date are one week earlier.  The intent is to give you an extra week between when I return the draft papers and when you have to turn in the final paper.  The earlier deadlines are given in parenthesis below.
+If things are not properly cited, you still get full credit, but all the deadlines except the final draft due date are up to one week earlier.  The intent is to give you an extra week between when I return the draft papers and when you have to turn in the final paper.  The earlier deadlines are given in parenthesis below and in the syllabus.
 
 ## Key Dates and Requirements
 
-1. Authors and co-authors must publish an abstract, including a few key references, in the “Draft Abstracts” assignment folder in D2L by _October 16th (October 9th) at 5pm_. Students will have a 20 minute review meeting with the instructor during that week. These meetings will be scheduled for the week of the 21st. Scope and depth changes will be agreed to in the meeting.
+1. Authors and co-authors must publish an abstract, including a few key references, in the “Draft Abstracts” assignment folder in D2L by _October 18th (October 14th) at 5pm_. 
 
-1. A revised abstract must be submitted by _October 28th (October 21st) at 5pm_  in the “Final Abstracts”
+1. Students will schedule a 20 minute review meeting with the instructor the following week. Meetings must be completed by _October 23rd (October 20th) at 5pm_. Scope and depth changes will be agreed to in the meeting.
+
+1. A revised abstract must be submitted by _October 28th (Oct 22) at 5pm_ in the “Revised Abstracts”
 assignment folder in D2L. Abstracts will be discussed in class on October 30th. 
 
-1. Authors and co-authors will construct an annotated bibliography. A reasonably complete annotated bibliography will be submitted in D2L by _November 1st (October )at 5pm_ in the “Bibliography” assignment folder.  Here are some links on how to create an annotated bibliography, http://guides.library.cornell.edu/annotatedbibliography and               https://www.bethel.edu/library/research/apa-annobib-sixth.pdf 
+1. Authors and co-authors will construct an annotated bibliography. A reasonably complete annotated bibliography will be submitted in D2L by  _November 6th (October 30th)  at 5pm_ in the “Bibliography” assignment folder.  Here are some links on how to create an annotated bibliography, http://guides.library.cornell.edu/annotatedbibliography and               https://www.bethel.edu/library/research/apa-annobib-sixth.pdf 
 
-1. Authors must schedule a 20-minute presentation to the class on data collection, design and analysis approach prior to completion of the draft paper.  Students conducting a literature review should schedule a similar session for a key papers in their literature review. These presentation will be scheduled to take place from _Nov 4th (October ) through the November 13th (October )_ unless the author team wants to schedule something earlier.  Early drafts and annotated bibliographies should be distributed before the presentation.
+1. Authors must schedule a 20-minute presentation to the class on data collection, design and analysis approach prior to completion of the draft paper.  Students conducting a literature review should schedule a similar session for a key papers in their literature review. These presentation will be scheduled completed _November 13th (November 6th)_ unless the author team wants to schedule something earlier.  Early drafts and annotated bibliographies should be distributed before the presentation.
 
-1. A draft of the paper must be published in the “Draft Papers” assignment folder in D2L by _5 pm on November 18th (October )_. If you are writing an empirical paper, the submission should include a link to your data and the code used to analyze the data. Comments to the students will be returned soon after. These comments will need to be addressed in the final paper. 
+1. A draft of the paper must be published in the “Draft Papers” assignment folder in D2L by _November 19th  (November 12th) at 5 pm_.  Comments returned by November 23rd (November 16th) 8pm.  These comments will need to be addressed in the final paper. If you are writing an empirical paper, the submission should include a link to your data and the code used to analyze the data. 
 
-1. The final paper must be published to the “Final Papers” assignment folder in D2L by _December 6th at 5pm_. Term papers
-must be less than 20 pages excluding bibliography.  The submission must include a separate document addressing the issues with the draft paper stating how the point is either irrelevant or how it is addressed in the paper.
+1. The final paper must be published to the “Final Papers” assignment folder in D2L by _December 4th at 5pm_. Final drafts should be between 15 and 20 pages long, excluding major graphics and bibliography.  Literature review papers should have at least 15 peer reviewed or government publications as part of the review. The submission must include a separate document addressing the issues with the draft paper stating how the point is either irrelevant or how it is addressed in the paper.
 
 # What is a Literature Review?
 
